--- a/src/app/pages/media-hub/media-hub-header/media-hub-header.component.html
+++ b/src/app/pages/media-hub/media-hub-header/media-hub-header.component.html
@@ -6,7 +6,9 @@
         </mat-form-field>
     </div>
     <div class="actions d-flex align-items-center">
-        <button mat-stroked-button>Upload</button>
+        <app-file-control (onChange)="uploadFiles($event)">
+            <button mat-stroked-button tabindex="-1">Upload</button>
+        </app-file-control>
         <div class="d-flex align-items-center mx-2">
             <button mat-icon-button class="view-icon">
                 <mat-icon>list</mat-icon>
