--- a/src/app/pages/media-hub/media-hub-gate/media-hub-gate.component.scss
+++ b/src/app/pages/media-hub/media-hub-gate/media-hub-gate.component.scss
@@ -12,9 +12,7 @@
     min-width: $height;
     height: $height;
   }
-  //   .input-append {
-  //     position: relative;
-  //     right: 65px;
-  //     bottom: 10px;
-  //   }
+  .card-columns {
+    column-count: 4 !important;
+  }
 }
