--- a/src/app/pages/media-hub/media-card/media-card.component.html
+++ b/src/app/pages/media-hub/media-card/media-card.component.html
@@ -4,7 +4,7 @@
         <h6 class="title">{{file.name}}</h6>
         <div class="d-flex align-items-center justify-content-between">
             <span class="text-uppercase bg-secondary p-1 rounded">{{file.type}}</span>
-            <span class="text-uppercase">323 kb</span>
+            <span class="text-uppercase">{{file.size / 1000 || ''}} kb</span>
         </div>
     </mat-card-content>
 </mat-card>
