--- a/src/assets/scss/_main.scss
+++ b/src/assets/scss/_main.scss
@@ -45,19 +45,19 @@ body {
   @include center_block();
 }
 
-// mat-form-field {
-//   width: 100%;
-//   $base_width: 0.75em;
-//   &[appearance="outline"] {
-//     .mat-form-field-infix {
-//       padding: $base_width 0 $base_width 0 !important;
-//       .mat-form-field-label-wrapper {
-//         top: -1em !important;
-//         padding-top: $base_width !important;
-//       }
-//     }
-//   }
-// }
+mat-form-field {
+  width: 100%;
+  $base_width: 0.75em;
+  &[appearance="outline"] {
+    .mat-form-field-infix {
+      padding: $base_width 0 $base_width 0 !important;
+      .mat-form-field-label-wrapper {
+        top: -1em !important;
+        padding-top: $base_width !important;
+      }
+    }
+  }
+}
 
 body {
   &.no-connection {
