--- a/src/assets/scss/_functions.scss
+++ b/src/assets/scss/_functions.scss
@@ -4,7 +4,7 @@
 // Author:: ezzabuzaid
 // Date:: 15 / 1 / 2019
 
-@import "./variables";
+@import './variables';
 @function get_color_from_theme($color, $theme) {
   $platte: map-get(
     $map: $theme,
