add delete folder

--- a/src/app/pages/media-hub/media-hub-gate/media-hub-gate.component.html
+++ b/src/app/pages/media-hub/media-hub-gate/media-hub-gate.component.html
@@ -2,7 +2,7 @@
 
 <mat-divider></mat-divider>
 <div class="row mx-0">
-    <div class="col-3 border-right pr-0 h-100">
+    <div class="col-3 border-right p-0 h-100">
         <app-media-hub-folders></app-media-hub-folders>
     </div>
     <div class="col-9">
