--- a/src/app/pages/media-hub/media-hub-folders/media-hub-folders.component.html
+++ b/src/app/pages/media-hub/media-hub-folders/media-hub-folders.component.html
@@ -24,14 +24,34 @@
 </mat-list>
 
 <mat-nav-list class="h-100">
-    <mat-list-item (click)="onFolderClick(folder)" *ngFor="let folder of folders">
-        <mat-icon mat-list-icon>
-            {{currentFolderID !== folder._id ? 'folder' : 'folder_open'}}
-        </mat-icon>
-        <div mat-line class="d-flex justify-content-between align-items-center">
-            <h4 class="folder-title"> {{folder.name}}</h4>
-            <mat-icon (click)="$event.preventDefault(); $event.stopPropagation();" class="text-muted">more_vert
+    <div class="d-flex" *ngFor="let folder of folders; let index = index;">
+        <mat-list-item (click)="onFolderClick(folder)">
+            <mat-icon mat-list-icon text-muted>
+                {{currentFolderID !== folder._id ? 'folder' : 'folder_open'}}
             </mat-icon>
-        </div>
-    </mat-list-item>
+            <div mat-line class="d-flex justify-content-between align-items-center">
+                <h4 class="folder-title"> {{folder.name}}</h4>
+            </div>
+        </mat-list-item>
+        <button mat-icon-button [matMenuTriggerFor]="menu" [matMenuTriggerData]="{folder: folder, index: index}">
+            <mat-icon class="text-muted">more_vert</mat-icon>
+        </button>
+    </div>
 </mat-nav-list>
+
+<mat-menu #menu="matMenu">
+    <ng-template matMenuContent let-folder="folder" let-index="index">
+        <button mat-menu-item (click)="deleteFolder(folder, index)">
+            <mat-icon>delete_outline</mat-icon>
+            <span class="text-muted">Delete</span>
+        </button>
+        <button mat-menu-item (click)="renameFolder(folder)">
+            <mat-icon>text_format</mat-icon>
+            <span class="text-muted">Rename</span>
+        </button>
+        <button mat-menu-item>
+            <mat-icon class="text-muted">notifications_off</mat-icon>
+            <span>share</span>
+        </button>
+    </ng-template>
+</mat-menu>
