--- a/src/app/layout/toolbar/toolbar.component.html
+++ b/src/app/layout/toolbar/toolbar.component.html
@@ -1,4 +1,4 @@
-<div class="mr-auto ml-5">
+<!-- <div class="mr-auto ml-5">
   <iframe
     src="https://ghbtns.com/github-btn.html?user=ezzabuzaid&repo=angular-buildozer&type=star&count=true&size=large"
     frameborder="0" scrolling="0" width="160px" height="30px"></iframe>
@@ -10,18 +10,18 @@
     frameborder="0" scrolling="0" width="158px" height="30px"></iframe>
   <iframe src="https://ghbtns.com/github-btn.html?user=ezzabuzaid&type=follow&count=true&size=large" frameborder="0"
     scrolling="0" width="220px" height="30px"></iframe>
-</div>
+</div> -->
 
-<button (click)="toggleSidebar()" class="mx-2" mat-icon-button>
+<button (click)="toggleSidebar()" class="mx-2 toolbar-button" mat-flat-button>
   <mat-icon class="text--accent">reorder</mat-icon>
 </button>
-<button (click)="toggleFullScreen()" mat-icon-button class="mx-2">
+<button (click)="toggleFullScreen()" mat-flat-button class="mx-2 toolbar-button">
   <mat-icon class="text--accent">fullscreen</mat-icon>
 </button>
-<button (click)="toggleFullScreen()" mat-icon-button class="mx-2">
+<button (click)="toggleFullScreen()" mat-flat-button class="mx-2 toolbar-button">
   <mat-icon class="text--accent">widgets</mat-icon>
 </button>
-<button [matMenuTriggerFor]="menu" mat-icon-button class="mx-2">
+<button [matMenuTriggerFor]="menu" mat-flat-button class="mx-2 toolbar-button">
   <mat-icon class="text--accent">public</mat-icon>
 </button>
 
@@ -37,12 +37,12 @@
 </mat-menu>
 
 <!-- <div class="seperator bg--primary"></div>
-<button class="toolbar-button" (click)="toggleFullScreen()" mat-icon-button>
+<button class="toolbar-button" (click)="toggleFullScreen()" mat-flat-button>
   <mat-icon color="primary">fullscreen</mat-icon>
   <span></span>
 </button>
 <div class="seperator bg--primary"></div>
-<button class="toolbar-button" [routerLink]="[routes.CHAT.withSlash]" mat-icon-button>
+<button class="toolbar-button" [routerLink]="[routes.CHAT.withSlash]" mat-flat-button>
   <mat-icon color="primary">chat</mat-icon>
 </button>
 <div class="seperator bg--primary"></div>
