add fullscreen directive

--- a/src/app/layout/toolbar/toolbar.component.html
+++ b/src/app/layout/toolbar/toolbar.component.html
@@ -15,10 +15,10 @@
 <button (click)="toggleSidebar()" class="mx-2 toolbar-button" mat-flat-button>
   <mat-icon class="text--accent">reorder</mat-icon>
 </button>
-<button (click)="toggleFullScreen()" mat-flat-button class="mx-2 toolbar-button">
+<button fullscreen mat-flat-button class="mx-2 toolbar-button">
   <mat-icon class="text--accent">fullscreen</mat-icon>
 </button>
-<button (click)="toggleFullScreen()" mat-flat-button class="mx-2 toolbar-button">
+<button mat-flat-button class="mx-2 toolbar-button">
   <mat-icon class="text--accent">widgets</mat-icon>
 </button>
 <button [matMenuTriggerFor]="menu" mat-flat-button class="mx-2 toolbar-button">
