--- a/src/app/layout/container/container.component.scss
+++ b/src/app/layout/container/container.component.scss
@@ -1,7 +1,7 @@
-@import 'functions';
-@import 'mixins';
-@import 'variables';
-@import '~@angular/material/theming';
+@import "functions";
+@import "mixins";
+@import "variables";
+@import "~@angular/material/theming";
 
 :host {
   app-toolbar {
@@ -12,8 +12,9 @@
     @include overflowHeight();
   }
   app-sidebar {
-    --width: 230px;
+    --width: 275px;
     [sidebar-drawer] {
+      background-color: transparent;
       mat-nav-list {
         img {
           width: 30px !important;
@@ -21,6 +22,11 @@
         }
       }
     }
+  }
+  .floating-button {
+    position: fixed;
+    right: 2%;
+    bottom: 2%;
   }
 }
 
