--- a/src/app/pages/media-hub/media-card/media-card.component.html
+++ b/src/app/pages/media-hub/media-card/media-card.component.html
@@ -1,4 +1,4 @@
-<mat-card class="mat-elevation-z0 border">
+<mat-card class="mat-elevation-z0">
     <img mat-card-image [src]="file.path" [alt]="file.name">
     <mat-card-content>
         <h6 class="title">{{file.name}}</h6>
