--- a/src/app/partials/chat-card/user-card/user-card.component.scss
+++ b/src/app/partials/chat-card/user-card/user-card.component.scss
@@ -1,8 +1,16 @@
+@import "mixins";
 :host {
+  opacity: 0;
+  will-change: opacity;
+  transition: opacity 0.25s;
+  transition-delay: 0.1s;
+  opacity: 1;
   position: fixed;
-  height: 400px;
-  width: 300px;
-  bottom: 0;
+  height: 450px;
+  width: 350px;
+  bottom: 2%;
+  border-top-right-radius: 15px;
+  border-top-left-radius: 15px;
   textarea.mat-input-element.cdk-textarea-autosize {
     box-sizing: content-box;
   }
@@ -11,16 +19,50 @@
     height: 30px !important;
   }
   mat-card {
+    border-top-right-radius: 15px;
+    border-top-left-radius: 15px;
     mat-card-content {
-      mat-form-field {
-        ::ng-deep {
-          .mat-form-field-wrapper {
-            padding: 0 !important;
-          }
-        }
+      .messages-list {
+        height: calc(100% - 120px);
+      }
+      .add-button {
+        $size: 30px;
+        height: $size;
+        line-height: 0px;
+        width: $size;
+        max-width: $size;
+        min-width: $size;
+        border-radius: 50px;
+        display: flex;
+        justify-content: center;
+        padding: 0;
+        transform: translateY(-5px);
+      }
+      .send-button {
+        transform: translateY(-3px);
       }
       textarea {
         font-size: 14px;
+        width: 100%;
+        padding: 0.5rem;
+        background-color: #f1f2f5;
+        &:hover,
+        &:focus {
+          outline: 0;
+        }
+        @include placeholder {
+          line-height: 30px;
+        }
+      }
+    }
+    footer {
+      position: relative;
+      height: 60px;
+      div {
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        width: 100%;
       }
     }
   }
@@ -29,8 +71,8 @@
     font-size: 20px;
     height: 20px;
     width: 20px;
-    margin: 0 0.25rem;
     cursor: pointer;
+    line-height: 20px;
     :hover {
       color: #8e8c8c;
     }
