adjust chat floating button

--- a/src/app/layout/container/container.component.html
+++ b/src/app/layout/container/container.component.html
@@ -40,6 +40,6 @@
   </app-content>
 </app-navbar>
 
-<button mat-fab class="floating-button">
+<button mat-mini-fab class="floating-button">
   <mat-icon>add_comment</mat-icon>
 </button>
