--- a/src/app/layout/container/container.component.scss
+++ b/src/app/layout/container/container.component.scss
@@ -23,8 +23,9 @@
       }
     }
   }
+
   .floating-button {
-    position: fixed;
+    position: fixed !important;
     right: 2%;
     bottom: 2%;
   }
