--- a/src/app/partials/chat-card/user-card/user-card.component.scss
+++ b/src/app/partials/chat-card/user-card/user-card.component.scss
@@ -22,8 +22,9 @@
     border-top-right-radius: 15px;
     border-top-left-radius: 15px;
     mat-card-content {
+      height: calc(100% - 60px);
       .messages-list {
-        height: calc(100% - 120px);
+        height: calc(100% - 60px);
       }
       .add-button {
         $size: 30px;
@@ -39,7 +40,7 @@
         transform: translateY(-5px);
       }
       .send-button {
-        transform: translateY(-3px);
+        transform: translateY(-2px);
       }
       textarea {
         font-size: 14px;
@@ -60,7 +61,6 @@
       height: 60px;
       div {
         position: absolute;
-        bottom: 0;
         left: 0;
         width: 100%;
       }
@@ -76,5 +76,16 @@
     :hover {
       color: #8e8c8c;
     }
+  }
+
+  .caret {
+    position: absolute;
+    right: -4%;
+    bottom: 2%;
+    width: 0;
+    height: 0;
+    border-top: 15px solid transparent;
+    border-bottom: 15px solid transparent;
+    border-left: 15px solid white;
   }
 }
