--- a/src/assets/scss/_main.scss
+++ b/src/assets/scss/_main.scss
@@ -1,6 +1,6 @@
-@import "functions";
-@import "mixins";
-@import "variables";
+@import 'functions';
+@import 'mixins';
+@import 'variables';
 
 html,
 body {
