use config in chat manger instead of parameters

--- a/src/app/layout/container/container.component.html
+++ b/src/app/layout/container/container.component.html
@@ -35,6 +35,6 @@
   </app-content>
 </app-navbar>
 
-<button mat-mini-fab class="floating-button">
+<button mat-mini-fab class="floating-button" (click)="openCreateChatCard()">
   <mat-icon>add_comment</mat-icon>
 </button>
