add auto complete to message card

--- a/src/app/pages/chat/chat-create-card/chat-create-card.component.html
+++ b/src/app/pages/chat/chat-create-card/chat-create-card.component.html
@@ -1,5 +1,5 @@
 <app-chat-card>
-    <div card-header class="py-2 pl-3 pr-2 py-2">
+    <header card-header class="py-2 pl-3 pr-2 py-2">
         <div class="w-100 d-flex align-items-center justify-content-between ">
             <p class="mb-0">New Message</p>
             <div class="d-flex">
@@ -10,23 +10,28 @@
         </div>
         <div class="pr-2">
             <mat-form-field appearance="legacy">
-                <span matPrefix>TO:</span>
-                <input #autoCompleteInput [formControl]="autocompleteControl" [matAutocomplete]="auto"
-                    [matChipInputFor]="chipList" [matChipInputSeparatorKeyCodes]="separatorKeysCodes">
-                <mat-autocomplete (optionSelected)="addUser($event,autoCompleteInput)" #auto="matAutocomplete">
-                    <mat-option *ngFor="let user of ($users | async)" [value]="user">
-                        <img class="mr-2" [size]="35" ngxGravatar [email]="user.email" fallback="identicon">
-                        <span>{{user.username}}</span>
-                    </mat-option>
-                </mat-autocomplete>
+                <!-- <span matPrefix>TO:</span> -->
                 <mat-chip-list #chipList>
                     <mat-chip *ngFor="let user of selectedUsers; let index = index;" [selectable]="false"
                         [removable]="true" (removed)="removeUser(index)">
                         {{user.username}}
                         <mat-icon matChipRemove>cancel</mat-icon>
                     </mat-chip>
+                    <input #autoCompleteInput [formControl]="autocompleteControl" [matAutocomplete]="auto"
+                        [matChipInputFor]="chipList" [matChipInputSeparatorKeyCodes]="separatorKeysCodes">
                 </mat-chip-list>
+                <mat-autocomplete (optionSelected)="selectUser($event, autoCompleteInput)" #auto="matAutocomplete">
+                    <mat-option *ngFor="let user of ($users | async)" [value]="user">
+                        <img class="mr-2" [size]="35" ngxGravatar [email]="user.email" fallback="identicon">
+                        <span>{{user.username}}</span>
+                    </mat-option>
+                </mat-autocomplete>
             </mat-form-field>
         </div>
-    </div>
+    </header>
+
+    <section card-content>
+        <app-chat-card-messages *ngIf="($conversation | async) as chatConversation" [user]="chatConversation?.user"
+            [conversation]="chatConversation?.conversation"></app-chat-card-messages>
+    </section>
 </app-chat-card>
