--- a/src/app/pages/chat/chat-create-card/chat-create-card.component.scss
+++ b/src/app/pages/chat/chat-create-card/chat-create-card.component.scss
@@ -5,4 +5,7 @@
   bottom: 2%;
   border-top-right-radius: 15px;
   border-top-left-radius: 15px;
+  section[card-content] {
+    height: calc(100% - 135px);
+  }
 }
