remove chatCardDate from floating button component

--- a/src/app/pages/chat/chat-floating-button/chat-floating-button.component.html
+++ b/src/app/pages/chat/chat-floating-button/chat-floating-button.component.html
@@ -1,1 +1,1 @@
-<img class="shadow" matListAvatar ngxGravatar [email]="data.user.email" fallback="identicon">
+<img class="shadow" matListAvatar ngxGravatar [email]="data.email" fallback="identicon">
