--- a/src/app/pages/chat/chat-card/chat-card.component.html
+++ b/src/app/pages/chat/chat-card/chat-card.component.html
@@ -1,6 +1,6 @@
 <mat-card class="h-100 d-flex flex-column justify-content-between mat-card-elevation-z0 shadow-lg p-0">
     <ng-content select="[card-header]"></ng-content>
-    <mat-card-content class="h-100">
+    <mat-card-content>
         <ng-content select="[card-content]"></ng-content>
     </mat-card-content>
 </mat-card>
