--- a/src/app/pages/chat/chat-card-messages/chat-card-messages.component.scss
+++ b/src/app/pages/chat/chat-card-messages/chat-card-messages.component.scss
@@ -2,4 +2,12 @@
   display: flex;
   overflow: auto;
   flex-direction: column;
+  img {
+    max-width: 75%;
+    max-height: 75%;
+  }
+  .message {
+    margin-bottom: 0.5rem;
+    padding: 0.5rem;
+  }
 }
