--- a/src/app/pages/static/page-not-found/page-not-found.component.html
+++ b/src/app/pages/static/page-not-found/page-not-found.component.html
@@ -1,1 +1,9 @@
-<p>page-not-found works!</p>
+<h1>404</h1>
+
+<div class="frame">
+    <div></div>
+    <div></div>
+    <div></div>
+</div>
+<div class="caps"><img src="http://ademilter.com/caps.png" alt=""></div>
+<canvas id="canvas"></canvas>
