Implement media picker in chat card

--- a/src/app/pages/chat/chat-card-footer/chat-card-footer.component.html
+++ b/src/app/pages/chat/chat-card-footer/chat-card-footer.component.html
@@ -15,7 +15,7 @@
     <button mat-button class="mx-1">
         <mat-icon class="text-muted">attachment</mat-icon>
     </button>
-    <button mat-button>
+    <button mat-button (click)="openMediaPicker()">
         <mat-icon class="text-muted">folder</mat-icon>
     </button>
 </div>
