--- a/src/app/pages/media-hub/media-card/media-card.component.html
+++ b/src/app/pages/media-hub/media-card/media-card.component.html
@@ -1,5 +1,7 @@
+<mat-icon (click)="toggleChecking()" [class.d-block]="checked"
+    class="pointer check-icon position-absolute bg--accent text-white border-radius-1">check</mat-icon>
 <mat-card class="mat-elevation-z0">
-    <img mat-card-image [src]="file.path" [alt]="file.name">
+    <img mat-card-image [src]="file.fullPath" [alt]="file.name">
     <mat-card-content>
         <h6 class="title">{{file.name}}</h6>
         <div class="d-flex align-items-center justify-content-between">
