--- a/src/app/partials/form/form-factory/form-factory.component.html
+++ b/src/app/partials/form/form-factory/form-factory.component.html
@@ -18,7 +18,7 @@
     <mat-form-field>
         <mat-label>{{field.label}}</mat-label>
         <input #input type="password" [autocomplete]="field.autocomplete" matInput [formControl]="field">
-        <mat-icon (click)="input.type === 'text' ? 'password' : 'text'" matSuffix>lock</mat-icon>
+        <mat-icon class="pointer" [togglePasswod]="input" matSuffix>lock</mat-icon>
     </mat-form-field>
 </ng-container>
 <ng-container *ngIf="field.typeOf(types.TEXTAREA)">
